tests/auto/qml/qqmllistreference/tst_qqmllistreference.cpp
@@ -863,8 +863,30 @@ void tst_qqmllistreference::compositeListProperty()
 {
     QQmlEngine engine;
     QQmlComponent component(&engine, testFileUrl("compositeListProp.qml"));
+
+    QTest::ignoreMessage(
+            QtWarningMsg, QRegularExpression("Cannot append QObject_QML_[0-9]+\\(0x[0-9a-f]+\\) "
+                                             "to a QML list of AListItem_QMLTYPE_[0-9]+\\*"));
+    QTest::ignoreMessage(
+            QtWarningMsg, QRegularExpression("Cannot append QObject_QML_[0-9]+\\(0x[0-9a-f]+\\) "
+                                             "to a QML list of AListItem_QMLTYPE_[0-9]+\\*"));
+    QTest::ignoreMessage(
+            QtWarningMsg, QRegularExpression("Cannot insert QObject_QML_[0-9]+\\(0x[0-9a-f]+\\) "
+                                             "into a QML list of AListItem_QMLTYPE_[0-9]+\\*"));
+    QTest::ignoreMessage(
+            QtWarningMsg, QRegularExpression("Cannot splice QObject_QML_[0-9]+\\(0x[0-9a-f]+\\) "
+                                             "into a QML list of AListItem_QMLTYPE_[0-9]+\\*"));
+    QTest::ignoreMessage(
+            QtWarningMsg, QRegularExpression("Cannot unshift QObject_QML_[0-9]+\\(0x[0-9a-f]+\\) "
+                                             "into a QML list of AListItem_QMLTYPE_[0-9]+\\*"));
+
     QScopedPointer<QObject> object(component.create());
     QVERIFY(!object.isNull());
+
+    QQmlListReference list1(object.data(), "items");
+    QCOMPARE(list1.size(), 5);
+    for (qsizetype i = 0; i < 5; ++i)
+        QCOMPARE(list1.at(i), nullptr);
 
     QQmlComponent item(&engine, testFileUrl("AListItem.qml"));
     QScopedPointer<QObject> i1(item.create());
@@ -873,7 +895,6 @@ void tst_qqmllistreference::compositeListProperty()
     QVERIFY(!i2.isNull());
 
     // We know the element type now.
-    QQmlListReference list1(object.data(), "items");
     QVERIFY(list1.listElementType() != nullptr);
     QVERIFY(list1.append(i1.data()));
     QVERIFY(list1.replace(0, i2.data()));
